hphp/test/zend/bad/Zend/tests/bug60909_1.php.expectf
error(require(notfound.php): failed to open stream: %s)
Warning: %s
Stack trace:
#0 %sbug60909_1.php(8): {closure}(2, 'require(notfoun...', '%s', 8, Array)
#1 %sbug60909_1.php(8): require()
#2 {main}
  thrown in %sbug60909_1.php on line 5

Fatal error: %s


!!!shutdown!!!